<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ZIC App</string>
    <string name="welcome">Welcome</string>
    <string name="please_sign_in_to_continue">Please Sign-in to continue</string>
    <string name="officer_number">Officer Number</string>
    <string name="officer_pin">Officer PIN</string>
    <string name="login">Login</string>
    <string name="forgot_officer_pin">Forgot Officer PIN?</string>
    <string name="powered_by">powered by</string>
    <string name="officer_name">Simoni Uhuru Mshiu</string>
    <string name="officer_type">Airport Officer</string>
    <string name="loggedin_date">May 20, 2024</string>
    <string name="checked_in">"Total Arrival"</string>
    <string name="checked_out">Total Departure</string>
    <string name="arrival_zic_certificate">Arrival Scan Certificate</string>
    <string name="departure_zic_certificate">Departure Scan Certificate</string>
    <string name="daily_report">Daily Report</string>
    <string name="settings_card">Settings</string>
    <string name="settings2">Settings</string>
    <string name="officer_language">Language</string>
    <string name="logout2">Logout</string>
    <string name="report">Report</string>
    <string name="end_of_day_report">End Of The Day Report</string>
    <string name="officer_name2">Entry Point</string>
    <string name="arrival_heading_certificates">Scanned Arrival</string>
    <string name="valid_arrival_certificates">Valid Scanned Arrival</string>
    <string name="invalid_arrival_certificates">Invalid Scanned Arrival</string>
    <string name="total_arrival_certificates">Total Scanned Arrival</string>
    <string name="departure_heading_certificates">Scanned Departure</string>
    <string name="valid_departure_certificates">Valid Scanned Departure</string>
    <string name="invalid_departure_certificates">Invalid Scanned Departure</string>
    <string name="total_departure_certificates">Total Scanned Departure</string>
    <string name="first_certificate">First Certificate</string>
    <string name="last_certificate">Last Certificate</string>
    <string name="arrived_certificate">Scanned Arrival</string>

    <string name="departure_certificate">Scanned Departure</string>
    <string name="nationality">Nationality</string>
    <string name="arrival_date">Insurance Start Date</string>
    <string name="reference_number">Insurance Number</string>
    <string name="birth_date">Date of Birth</string>
    <string name="passport_number">Passport Number</string>
    <string name="applicant_travel_details">Applicant Travel Details</string>
    <string name="mark_verified">Mark Verified</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="attention">Attention</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="error">Error</string>
    <string name="qrcode_scan_success">Scan Success</string>
    <string name="verify_passport">Verify Insurance</string>
    <string name="hospital_inspector">Hospital Inspector</string>
    <string name="total_claims">Total Claims:</string>
    <string name="scan_travel_insurance">Scan Insurance QR Code</string>
</resources>