<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:src="@drawable/zic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.07"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:id="@+id/officer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:fontFamily="@font/rubik_regular"
        android:textSize="27sp"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginHorizontal="10dp"
        />


    <GridLayout
        android:id="@+id/sample_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/officer_name"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        android:rowCount="1"
        android:columnCount="2"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/end_of_day_report"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="17sp"
            android:layout_gravity="start"
            />

        <TextView
            android:id="@+id/today_date_report"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/loggedin_date"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="17sp"
            android:layout_gravity="end"
            />
    </GridLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/sample_grid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginHorizontal="10dp"
        android:background="#dee2e6"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/officer_name_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/officer_name2"
        android:textAllCaps="true"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/checkin_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.536" />

    <GridLayout
        android:id="@+id/checkin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="5"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintVertical_bias="0.14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/arrival_heading_certificates"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/checkin_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="4dp"
            android:text=" "
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/valid_arrival_certificates"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/valid_arrival_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="4dp"
            android:text="-"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="4dp"
            android:text="@string/invalid_arrival_certificates"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/invalid_arrival_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_regular"
            android:text="-"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_medium"
            android:paddingVertical="4dp"
            android:text="@string/total_arrival_certificates"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/total_arrival_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_medium"
            android:text="-"
            android:textAllCaps="false"
            android:textSize="17sp" />

    </GridLayout>

    <GridLayout
        android:id="@+id/checkout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="5"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkin_layout"
        app:layout_constraintVertical_bias="0.14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/departure_heading_certificates"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/checkout_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="4dp"
            android:text=" "
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/valid_departure_certificates"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/valid_departure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="4dp"
            android:text="-"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="4dp"
            android:text="@string/invalid_departure_certificates"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/invalid_departure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_regular"
            android:text="-"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/rubik_medium"
            android:paddingVertical="4dp"
            android:text="@string/total_departure_certificates"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/total_departure_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/rubik_medium"
            android:text="-"
            android:textAllCaps="false"
            android:textSize="17sp" />

    </GridLayout>

    <View
        android:visibility="visible"
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/checkin_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginHorizontal="20dp"
        android:background="#dee2e6"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>