<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:src="@drawable/zic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.07"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:id="@+id/officer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings2"
        android:fontFamily="@font/rubik_regular"
        android:textSize="27sp"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginHorizontal="10dp"
        />


    <GridLayout
        android:id="@+id/sample_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/officer_name"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        android:rowCount="1"
        android:columnCount="2"
        >

        <TextView
            android:id="@+id/entry_point"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/officer_type"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="17sp"
            android:layout_gravity="start"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/today_date"
            android:text="@string/loggedin_date"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="17sp"
            android:layout_gravity="end"
            />
    </GridLayout>

    <GridLayout
        android:id="@+id/sample_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sample_grid"
        app:layout_constraintVertical_bias="0.043">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/officer_language"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="17sp"
            android:layout_gravity="start"/>

        <Spinner
            android:id="@+id/spinner_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:layout_marginHorizontal="20dp"
        android:text="@string/logout2"
        android:textSize="20sp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/primary_color"
        >

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>