<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:src="@drawable/zic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/applicant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phillip Joffrey Watermark"
        android:fontFamily="@font/rubik_regular"
        android:textSize="27sp"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginHorizontal="10dp" />

    <GridLayout
        android:id="@+id/sample_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applicant_name"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintBottom_toBottomOf="parent"
        android:rowCount="2"
        android:columnCount="2">

        <TextView
            android:id="@+id/nationality"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="American"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="20sp"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/arrival_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/loggedin_date"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="20sp"
            android:layout_gravity="end" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_date"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="end" />
    </GridLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:alpha="0.2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sample_grid" />

    <GridLayout
        android:id="@+id/reference_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:padding="5dp"
        android:rowCount="2"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference_number"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/reference_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CT-A-3435445"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_medium"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/birth_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/loggedin_date"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:textSize="20sp"
            android:layout_gravity="end" />

    </GridLayout>

    <GridLayout
        android:id="@+id/passport_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reference_grid"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:padding="5dp"
        android:rowCount="2"
        android:columnCount="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport_number"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/passport_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AME324324"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:fontFamily="@font/rubik_medium"
            android:layout_gravity="start" />

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/verify_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:layout_marginHorizontal="10dp"
        android:text="@string/mark_verified"
        android:fontFamily="@font/rubik_regular"
        android:textSize="18sp"
        android:paddingVertical="16dp"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>